2001-10-04  Stefan Monnier  <monnier@cs.yale.edu>

	* progmodes/perl-mode.el (perl-indent-continued-arguments): New var.
	(perl-calculate-indent): Use it.
	(perl-backward-to-noncomment): Use forward-comment.

	* derived.el (define-derived-mode, derived-mode-make-docstring):
	Allow `parent' to be nil.

	* textmodes/nroff-mode.el (nroff-mode-abbrev-table, nroff-mode):
	Use define-derived-mode.
	(nroff-mode-map, nroff-mode-syntax-table): Massage.

	* mail/mailabbrev.el (mail-abbrev-in-expansion-header-p): Simplify.

	* emacs-lisp/lselect.el: Use facep iso find-face.

	* emacs-lisp/lisp-mode.el (lisp-imenu-generic-expression):
	Use regexp-opt.
	(doc-string-elt): Set symbols' prop.  Copied from autoload.el.
	(lisp-font-lock-syntactic-face-function): New function.
	(lisp-mode-variables): Use it.  Make arg optional.
	(emacs-lisp-mode): Don't pass an arg to lisp-mode-variables.
	(lisp-mode): Don't pass an arg to lisp-mode-variables.
	Set comment-start-skip.

	* emacs-lisp/lisp-mnt.el (lm-history-header): Accept `ChangeLog'.

	* emacs-lisp/cl-macs.el (frame-parameter): Add a setf method.
	(ignore-errors): Don't bother using a `err' symbol.

	* emacs-lisp/autoload.el (autoload-ensure-default-file)
	(autoload-insert-section-header, autoload-before-p)
	(autoload-remove-section): New functions.
	(generate-file-autoloads): Use them.
	(update-file-autoloads): Use them.  Return FILE if there's no cookie.
	Make sure the autoload file is properly formatted when creating it.
	(update-autoloads-from-directories): Use them as well.
	Only update autoloads for files whose timestamp has changed.
	Add a dummy entry to remember the files which had no autoload cookies.

	* timer.el (timer-relative-time): Fix computation for negative `micro'.

	* subr.el (define-key-after): Allow `key' to be longer than 1.
	(make-local-hook): Make obsolete.
	(add-hook, remove-hook): Don't use make-local-hook any more.
	(make-syntax-table): Inherit all chars from s-s-t.
